sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:39: error: Unmatched closing brace '}' ignored here
}
^